--- a/homework.ipynb
+++ b/homework.ipynb
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 281,
       "metadata": {
         "id": "5Ui_1NK6Lbsf"
       },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 282,
       "metadata": {
         "id": "NYZZPanuLfLt"
       },
@@ -133,12 +133,12 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p2 = q2[3]"
+        "p2 = q2[2]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 283,
       "metadata": {
         "id": "qA7S3vqHMOg5"
       },
@@ -146,10 +146,10 @@
         {
           "data": {
             "text/plain": [
-              "7"
+              "5"
             ]
           },
-          "execution_count": 217,
+          "execution_count": 283,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 230,
+      "execution_count": 290,
       "metadata": {
         "id": "GcLSUzAGMuXg"
       },
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 231,
+      "execution_count": 292,
       "metadata": {
         "id": "ZCPJVNnMM34o"
       },
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 232,
+      "execution_count": 286,
       "metadata": {
         "id": "j3D_mbJzMTLn"
       },
@@ -458,7 +458,7 @@
               "40"
             ]
           },
-          "execution_count": 232,
+          "execution_count": 286,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -506,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 235,
+      "execution_count": 293,
       "metadata": {
         "id": "bKzt-l6RNLfI"
       },
@@ -514,12 +514,12 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p8 = [x for x in q8a if x in q8b]"
+        "p8 = len([x for x in q8a if x in q8b])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 236,
+      "execution_count": 294,
       "metadata": {
         "id": "fkeQtRu_MUdC"
       },
@@ -527,10 +527,10 @@
         {
           "data": {
             "text/plain": [
-              "[24, 25, 26]"
+              "3"
             ]
           },
-          "execution_count": 236,
+          "execution_count": 294,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1030,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": 297,
       "metadata": {
         "id": "u4AbsndXtp4C"
       },
@@ -1038,8 +1038,8 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "new_list = []\n",
         "def p14(ns):\n",
+        "    new_list = []\n",
         "    for i in ns:\n",
         "        if i % 14 == 0 and i >= 1: \n",
         "            new_list.append(i)"
@@ -1047,7 +1047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": null,
       "metadata": {
         "id": "MaAN_wmlM_gK"
       },
@@ -1058,15 +1058,13 @@
               "[14]"
             ]
           },
-          "execution_count": 258,
+          "execution_count": 298,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "p14([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n",
-        "\n",
-        "new_list"
+        "p14([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
       ]
     },
     {
@@ -1082,7 +1080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": 299,
       "metadata": {
         "id": "-Tcp57jgtws1"
       },
@@ -1096,35 +1094,24 @@
         "            return \"True\"\n",
         "        else:\n",
         "            return \"False\"\n",
-        "    else:\n",
-        "        return \"False\""
+        "    # else:\n",
+        "        # return \"False\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 300,
       "metadata": {
         "id": "Iya7nbwrNIQr"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'False'"
-            ]
-          },
-          "execution_count": 260,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "p15({})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 261,
+      "execution_count": 301,
       "metadata": {
         "id": "o665-5VzNJgu"
       },
@@ -1135,7 +1122,7 @@
               "'True'"
             ]
           },
-          "execution_count": 261,
+          "execution_count": 301,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1442,7 +1429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 274,
+      "execution_count": 304,
       "metadata": {
         "id": "kMtdLDZNt9w7"
       },
@@ -1471,7 +1458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 275,
+      "execution_count": 305,
       "metadata": {
         "id": "vJM-6hEcNbtj"
       },
@@ -1479,16 +1466,16 @@
         {
           "data": {
             "text/plain": [
-              "('blue', 'medium')"
+              "{'blue', 'medium'}"
             ]
           },
-          "execution_count": 275,
+          "execution_count": 305,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "p19"
+        "set(p19)"
       ]
     },
     {
@@ -1504,7 +1491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 276,
+      "execution_count": 306,
       "metadata": {
         "id": "QFpWFVpQAN1U"
       },
@@ -1518,28 +1505,17 @@
         "            return \"True\"\n",
         "        else:\n",
         "            return \"False\"\n",
-        "    else:\n",
-        "        return \"False\""
+        "    # else:\n",
+        "        # return \"False\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 277,
+      "execution_count": 307,
       "metadata": {
         "id": "FzCHcYRvNc9C"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'False'"
-            ]
-          },
-          "execution_count": 277,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "p20({})"
       ]
