--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1424,7 +1424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 498,
+      "execution_count": 503,
       "metadata": {
         "id": "RcsFeZwGt6Sr"
       },
@@ -1442,7 +1442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 501,
+      "execution_count": 504,
       "metadata": {
         "id": "kMtdLDZNt9w7"
       },
@@ -1461,7 +1461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 502,
+      "execution_count": 505,
       "metadata": {
         "id": "vJM-6hEcNbtj"
       },
@@ -1469,16 +1469,16 @@
         {
           "data": {
             "text/plain": [
-              "[('red', 'long'), ('red', 'medium'), ('blue', 'medium')]"
+              "{('blue', 'medium'), ('red', 'long'), ('red', 'medium')}"
             ]
           },
-          "execution_count": 502,
+          "execution_count": 505,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "p19 "
+        "set(p19)"
       ]
     },
     {
