--- a/homework.ipynb
+++ b/homework.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 434,
+      "execution_count": 535,
       "metadata": {
         "id": "GcLSUzAGMuXg"
       },
@@ -1030,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 461,
+      "execution_count": 532,
       "metadata": {
         "id": "u4AbsndXtp4C"
       },
@@ -1043,32 +1043,20 @@
         "def p14(a):\n",
         "    for i in a:\n",
         "        if i % 14 == 0 and i >= 1: \n",
-        "            new_list.append(i)\n",
+        "            return new_list.append(i)\n",
         "    \n",
-        "show_new_list = new_list"
+        "# show_new_list = new_list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 462,
+      "execution_count": 533,
       "metadata": {
         "id": "MaAN_wmlM_gK"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[14]"
-            ]
-          },
-          "execution_count": 462,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "p14([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n",
-        "show_new_list"
+        "p14([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
       ]
     },
     {
@@ -1084,7 +1072,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 463,
+      "execution_count": 526,
       "metadata": {
         "id": "-Tcp57jgtws1"
       },
@@ -1095,14 +1083,16 @@
         "def p15(dict):\n",
         "    for k, v in dict.items():\n",
         "        if k == \"x\" and v == 15:\n",
-        "            return \"true\"\n",
+        "            return True\n",
+        "        else:\n",
+        "            return False\n",
         "    else:\n",
-        "        return \"false\""
+        "        return True"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 464,
+      "execution_count": 527,
       "metadata": {
         "id": "Iya7nbwrNIQr"
       },
@@ -1110,10 +1100,10 @@
         {
           "data": {
             "text/plain": [
-              "'false'"
+              "True"
             ]
           },
-          "execution_count": 464,
+          "execution_count": 527,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1124,7 +1114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 465,
+      "execution_count": 522,
       "metadata": {
         "id": "o665-5VzNJgu"
       },
@@ -1132,10 +1122,10 @@
         {
           "data": {
             "text/plain": [
-              "'true'"
+              "True"
             ]
           },
-          "execution_count": 465,
+          "execution_count": 522,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1146,7 +1136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 466,
+      "execution_count": 523,
       "metadata": {
         "id": "86KCzgsPNLul"
       },
@@ -1154,10 +1144,10 @@
         {
           "data": {
             "text/plain": [
-              "'false'"
+              "False"
             ]
           },
-          "execution_count": 466,
+          "execution_count": 523,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1168,7 +1158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 467,
+      "execution_count": 524,
       "metadata": {
         "id": "M7Mn42mxNOB5"
       },
@@ -1176,10 +1166,10 @@
         {
           "data": {
             "text/plain": [
-              "'false'"
+              "False"
             ]
           },
-          "execution_count": 467,
+          "execution_count": 524,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1190,7 +1180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 468,
+      "execution_count": 525,
       "metadata": {
         "id": "bB16NsNVNPpU"
       },
@@ -1198,10 +1188,10 @@
         {
           "data": {
             "text/plain": [
-              "'true'"
+              "True"
             ]
           },
-          "execution_count": 468,
+          "execution_count": 525,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1442,7 +1432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 504,
+      "execution_count": 530,
       "metadata": {
         "id": "kMtdLDZNt9w7"
       },
@@ -1456,12 +1446,12 @@
         "    if \"red\" in i or \"medium\" in i:\n",
         "        new_list.append(i)\n",
         "\n",
-        "p19 = new_list"
+        "p19 = set(new_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 505,
+      "execution_count": 531,
       "metadata": {
         "id": "vJM-6hEcNbtj"
       },
@@ -1472,13 +1462,13 @@
               "{('blue', 'medium'), ('red', 'long'), ('red', 'medium')}"
             ]
           },
-          "execution_count": 505,
+          "execution_count": 531,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "set(p19)"
+        "p19"
       ]
     },
     {
@@ -1494,7 +1484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 488,
+      "execution_count": 516,
       "metadata": {
         "id": "QFpWFVpQAN1U"
       },
@@ -1505,16 +1495,16 @@
         "def p20(d):\n",
         "    for k,v in d.items():\n",
         "        if k == v:\n",
-        "            return \"true\"\n",
-        "        else:\n",
-        "            return \"false\"\n",
+        "            return True\n",
+        "        if k != v:\n",
+        "            return False\n",
         "    else:\n",
-        "        return \"true\""
+        "        return True"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 489,
+      "execution_count": 512,
       "metadata": {
         "id": "FzCHcYRvNc9C"
       },
@@ -1522,10 +1512,10 @@
         {
           "data": {
             "text/plain": [
-              "'true'"
+              "True"
             ]
           },
-          "execution_count": 489,
+          "execution_count": 512,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1536,7 +1526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 490,
+      "execution_count": 513,
       "metadata": {
         "id": "AjoWVEYWNd9V"
       },
@@ -1544,10 +1534,10 @@
         {
           "data": {
             "text/plain": [
-              "'true'"
+              "True"
             ]
           },
-          "execution_count": 490,
+          "execution_count": 513,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1558,7 +1548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 491,
+      "execution_count": 514,
       "metadata": {
         "id": "HaFwX6vLNftw"
       },
@@ -1566,10 +1556,10 @@
         {
           "data": {
             "text/plain": [
-              "'true'"
+              "True"
             ]
           },
-          "execution_count": 491,
+          "execution_count": 514,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1580,7 +1570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 492,
+      "execution_count": 517,
       "metadata": {
         "id": "r25Ib6PzNipD"
       },
@@ -1588,10 +1578,10 @@
         {
           "data": {
             "text/plain": [
-              "'true'"
+              "True"
             ]
           },
-          "execution_count": 492,
+          "execution_count": 517,
           "metadata": {},
           "output_type": "execute_result"
         }
