--- a/homework.ipynb
+++ b/homework.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 535,
+      "execution_count": null,
       "metadata": {
         "id": "GcLSUzAGMuXg"
       },
@@ -434,20 +434,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 435,
+      "execution_count": 754,
       "metadata": {
         "id": "ZCPJVNnMM34o"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p7 = 20"
+        "p7 = 29"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 436,
+      "execution_count": 755,
       "metadata": {
         "id": "j3D_mbJzMTLn"
       },
@@ -455,10 +454,10 @@
         {
           "data": {
             "text/plain": [
-              "20"
+              "29"
             ]
           },
-          "execution_count": 436,
+          "execution_count": 755,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -552,7 +551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 441,
+      "execution_count": 762,
       "metadata": {
         "id": "ycA8XTCOpuUj"
       },
@@ -570,30 +569,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 442,
+      "execution_count": null,
       "metadata": {
         "id": "h7F82RDKpu7l"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0.13, 0.98] [1.0, 0.52] [0.64] [0.25]\n"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "scores = [s[\"score\"] for s in q9]\n",
-        "colors = [c[\"color\"] for c in q9]\n",
+        "r = [c[\"score\"] for c in q9 if c[\"color\"] == \"red\"]\n",
+        "b = [c[\"score\"] for c in q9 if c[\"color\"] == \"blue\"]\n",
+        "g = [c[\"score\"] for c in q9 if c[\"color\"] == \"green\"]\n",
+        "v = [c[\"score\"] for c in q9 if c[\"color\"] == \"violet\"]\n",
+        "print(r,b,g,v)\n",
         "\n",
         "new_dict = {}\n",
         "\n",
-        "for color in new_dict:\n",
-        "    new_dict.append(scores)\n",
+        "for red in new_dict:\n",
+        "    new_dict.append(r)\n",
         "\n",
-        "new_dict = {d[\"color\"] : d[\"score\"] for d in q9}\n",
+        "for blue in new_dict:\n",
+        "    new_dict.append(r)\n",
         "\n",
+        "for green in new_dict:\n",
+        "    new_dict.append(g)\n",
+        "\n",
+        "for violet in new_dict:\n",
+        "    new_dict.appen(v)\n",
+        "\n",
+        "new_dict = {\"red\" : r, \"blue\" : b, \"green\" : g, \"violet\" : v}\n",
         "p9 = new_dict\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 443,
+      "execution_count": 818,
       "metadata": {
         "id": "v-KXyX4KMpO5"
       },
@@ -601,10 +619,10 @@
         {
           "data": {
             "text/plain": [
-              "{'red': 0.98, 'blue': 0.52, 'green': 0.64, 'violet': 0.25}"
+              "{'red': [0.13, 0.98], 'blue': [1.0, 0.52], 'green': [0.64], 'violet': [0.25]}"
             ]
           },
-          "execution_count": 443,
+          "execution_count": 818,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1030,7 +1048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 532,
+      "execution_count": 721,
       "metadata": {
         "id": "u4AbsndXtp4C"
       },
@@ -1038,19 +1056,17 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "new_list = []\n",
-        "\n",
         "def p14(a):\n",
+        "    new_list = []\n",
         "    for i in a:\n",
         "        if i % 14 == 0 and i >= 1: \n",
         "            return new_list.append(i)\n",
-        "    \n",
-        "# show_new_list = new_list"
+        "    "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 533,
+      "execution_count": 722,
       "metadata": {
         "id": "MaAN_wmlM_gK"
       },
@@ -1072,7 +1088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 526,
+      "execution_count": 715,
       "metadata": {
         "id": "-Tcp57jgtws1"
       },
@@ -1081,7 +1097,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p15(dict):\n",
-        "    for k, v in dict.items():\n",
+        "    for (k, v) in dict.items():\n",
         "        if k == \"x\" and v == 15:\n",
         "            return True\n",
         "        else:\n",
@@ -1092,7 +1108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 527,
+      "execution_count": 716,
       "metadata": {
         "id": "Iya7nbwrNIQr"
       },
@@ -1103,7 +1119,7 @@
               "True"
             ]
           },
-          "execution_count": 527,
+          "execution_count": 716,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1114,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 522,
+      "execution_count": 717,
       "metadata": {
         "id": "o665-5VzNJgu"
       },
@@ -1125,7 +1141,7 @@
               "True"
             ]
           },
-          "execution_count": 522,
+          "execution_count": 717,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1136,7 +1152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 523,
+      "execution_count": 718,
       "metadata": {
         "id": "86KCzgsPNLul"
       },
@@ -1147,7 +1163,7 @@
               "False"
             ]
           },
-          "execution_count": 523,
+          "execution_count": 718,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1158,7 +1174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 524,
+      "execution_count": 719,
       "metadata": {
         "id": "M7Mn42mxNOB5"
       },
@@ -1169,7 +1185,7 @@
               "False"
             ]
           },
-          "execution_count": 524,
+          "execution_count": 719,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1180,7 +1196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 525,
+      "execution_count": 720,
       "metadata": {
         "id": "bB16NsNVNPpU"
       },
@@ -1191,7 +1207,7 @@
               "True"
             ]
           },
-          "execution_count": 525,
+          "execution_count": 720,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1484,7 +1500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 516,
+      "execution_count": null,
       "metadata": {
         "id": "QFpWFVpQAN1U"
       },
@@ -1492,63 +1508,39 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "def p20(d):\n",
-        "    for k,v in d.items():\n",
-        "        if k == v:\n",
-        "            return True\n",
-        "        if k != v:\n",
-        "            return False\n",
-        "    else:\n",
-        "        return True"
+        "# def p20(d):\n",
+        "   \n",
+        "\n",
+        "\n",
+        "                 \n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 512,
+      "execution_count": 752,
       "metadata": {
         "id": "FzCHcYRvNc9C"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 512,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "p20({})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 513,
+      "execution_count": 753,
       "metadata": {
         "id": "AjoWVEYWNd9V"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 513,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "p20({\"x\": \"x\"})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 514,
+      "execution_count": 749,
       "metadata": {
         "id": "HaFwX6vLNftw"
       },
@@ -1556,10 +1548,10 @@
         {
           "data": {
             "text/plain": [
-              "True"
+              "False"
             ]
           },
-          "execution_count": 514,
+          "execution_count": 749,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1570,7 +1562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 517,
+      "execution_count": 750,
       "metadata": {
         "id": "r25Ib6PzNipD"
       },
@@ -1578,10 +1570,10 @@
         {
           "data": {
             "text/plain": [
-              "True"
+              "False"
             ]
           },
-          "execution_count": 517,
+          "execution_count": 750,
           "metadata": {},
           "output_type": "execute_result"
         }
