--- a/homework.ipynb
+++ b/homework.ipynb
@@ -551,7 +551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 762,
+      "execution_count": 820,
       "metadata": {
         "id": "ycA8XTCOpuUj"
       },
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 824,
       "metadata": {
         "id": "h7F82RDKpu7l"
       },
@@ -611,7 +611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 818,
+      "execution_count": 822,
       "metadata": {
         "id": "v-KXyX4KMpO5"
       },
@@ -622,7 +622,7 @@
               "{'red': [0.13, 0.98], 'blue': [1.0, 0.52], 'green': [0.64], 'violet': [0.25]}"
             ]
           },
-          "execution_count": 818,
+          "execution_count": 822,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1048,11 +1048,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 721,
+      "execution_count": 830,
       "metadata": {
         "id": "u4AbsndXtp4C"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[14]"
+            ]
+          },
+          "execution_count": 830,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -1061,12 +1072,14 @@
         "    for i in a:\n",
         "        if i % 14 == 0 and i >= 1: \n",
         "            return new_list.append(i)\n",
+        "    \n",
+        "new_list\n",
         "    "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 722,
+      "execution_count": 831,
       "metadata": {
         "id": "MaAN_wmlM_gK"
       },
@@ -1088,7 +1101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 715,
+      "execution_count": 835,
       "metadata": {
         "id": "-Tcp57jgtws1"
       },
@@ -1103,12 +1116,12 @@
         "        else:\n",
         "            return False\n",
         "    else:\n",
-        "        return True"
+        "        return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 716,
+      "execution_count": 836,
       "metadata": {
         "id": "Iya7nbwrNIQr"
       },
@@ -1116,10 +1129,10 @@
         {
           "data": {
             "text/plain": [
-              "True"
+              "False"
             ]
           },
-          "execution_count": 716,
+          "execution_count": 836,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1130,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 717,
+      "execution_count": 837,
       "metadata": {
         "id": "o665-5VzNJgu"
       },
@@ -1141,7 +1154,7 @@
               "True"
             ]
           },
-          "execution_count": 717,
+          "execution_count": 837,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1152,7 +1165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 718,
+      "execution_count": 838,
       "metadata": {
         "id": "86KCzgsPNLul"
       },
@@ -1163,7 +1176,7 @@
               "False"
             ]
           },
-          "execution_count": 718,
+          "execution_count": 838,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1174,7 +1187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 719,
+      "execution_count": 839,
       "metadata": {
         "id": "M7Mn42mxNOB5"
       },
@@ -1185,7 +1198,7 @@
               "False"
             ]
           },
-          "execution_count": 719,
+          "execution_count": 839,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1196,7 +1209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 720,
+      "execution_count": 840,
       "metadata": {
         "id": "bB16NsNVNPpU"
       },
@@ -1207,7 +1220,7 @@
               "True"
             ]
           },
-          "execution_count": 720,
+          "execution_count": 840,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1500,7 +1513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 945,
       "metadata": {
         "id": "QFpWFVpQAN1U"
       },
@@ -1508,7 +1521,12 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "# def p20(d):\n",
+        "def p20(d):\n",
+        "    v = d.values()\n",
+        "    k = d.keys()\n",
+        "    if v != k:\n",
+        "        return True\n",
+        "\n",
         "   \n",
         "\n",
         "\n",
@@ -1518,29 +1536,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 752,
+      "execution_count": 946,
       "metadata": {
         "id": "FzCHcYRvNc9C"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 946,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p20({})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 753,
+      "execution_count": 947,
       "metadata": {
         "id": "AjoWVEYWNd9V"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 947,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p20({\"x\": \"x\"})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 749,
+      "execution_count": 948,
       "metadata": {
         "id": "HaFwX6vLNftw"
       },
@@ -1548,10 +1588,10 @@
         {
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
-          "execution_count": 749,
+          "execution_count": 948,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1562,7 +1602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 750,
+      "execution_count": 949,
       "metadata": {
         "id": "r25Ib6PzNipD"
       },
@@ -1570,10 +1610,10 @@
         {
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
-          "execution_count": 750,
+          "execution_count": 949,
           "metadata": {},
           "output_type": "execute_result"
         }
